<resources>
    <string name="app_name">Remind Me</string>
    <string name="listofmyworks">قائمة الأعمال</string>
    <string name="reportforerror">الإبلاغ عن خطأ</string>
    <string name="title">ٌذكرني</string>
    <string name="contactus">للاستفسار و التواصل معنا</string>
    <string name="قائمةأعمالي">قائمة أعمالي</string>
    <string name="أعمالي_اليومية">أعمالي اليومية</string>
    <string name="تطوير">مهارات أريد تطويرها في المستقبل القريب</string>
    <string name="أفكاري">أفكاري</string>
    <string name="الاستفسار">أسئلة أود الاستفسار عنها</string>
    <string name="فائدة">تدوين فائدة</string>
    <string name="addnew">إضافة</string>
    <string name="modify">تعديل</string>
    <string name="delete">حذف</string>
    <string name="add_new">add new</string>
    <string name="write_here">write here</string>
    <string name="addwork">إضافة عمل</string>
    <string name="add">إضافة</string>
    <string name="back">رجوع</string>
    <string name="deleteall">حذف الكل</string>
    <string name="saveall">حفظ الكل</string>
    <string name="getback">تراجع</string>
    <string name="yes">نعم</string>
    <string name="doyouwanttodeleteall">هل تريد حذف كل البيانات ؟</string>
    <string name="doyouwanttosavealldata">هل تريذ حفظ البيانات ؟</string>
    <string name="No">لا</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test">test</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="arifbitatbik">تطبيق ذكرني</string>
    <string name="contactmail">للتواصل عبر المايل :</string>
    <string name="instagram">للتواصل عبر instagram :</string>
    <string name="monmail">mohdev81@fmail.com</string>
    <string name="copy">نسخ</string>
    <string name="titletrext">Title</string>
    <string name="titleskilles">مهارات أريد تطويرها</string>
    <string name="أسئلتي">أسئلتي</string>
    <string name="grine_mohammed">grine__mohammed</string>
</resources>